# unittest-training

./: .gitignore  Makefile  README.md  install.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
src/fizzbuzz/: fizzbuzz.py
src/greeting/: greeting.py
src/level1/: fizzbuzz.py
tests/fizzbuzz/: fizzbuzz  test_fizzbuzz.py  test_fizzbuzz2.py  test_fizzbuzz_answer_1.py  test_fizzbuzz_answer_2.py
tests/greeting/: description.md  greeting  test_greeting.py  test_greeting_answer_1.py  test_greeting_answer_2.py
tests/level1/: description.md  test_fizzbuzz.py  test_fizzbuzz_answer_1.py  test_fizzbuzz_answer_2.py
