[project]
name = "unittest-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[tool.pytest.ini_options]
minversion = "8.3.5"
pythonpath = ["src/"]
testpaths = ["tests/"]
